fix(styles): update high-contrast mode link styling

--- a/packages/styles/src/elements/link.scss
+++ b/packages/styles/src/elements/link.scss
@@ -22,10 +22,10 @@ a {
   );
 
   @include utilities.high-contrast-mode() {
-    &,
-    &:visited,
-    &:focus,
-    &:hover {
+    color: CanvasText !important;
+
+    &:hover,
+    &:focus {
       color: LinkText !important;
     }
   }
